# PyARMViz

./: PyARMViz.py  README.md  pyproject.toml  requirements.txt  setup.py
PyARMViz/: PyARMViz.py  Rule.py  __init__.py
PyARMViz/datasets/: Online_Retail.tar.xz  Online_Retail_Grouped.tar.xz  Online_Retail_Rules.json  ReducedRetail.parquet  __init__.py
PyARMViz/tests/: unit_tests.py
tests/: test.graphml  unit_tests.py
